--- a/1505.html
+++ b/1505.html
@@ -10,6 +10,8 @@
 <body>
     <p id = "demo">My name is srinivasan. <br> I am 56 years old.</p>
     <script src="1505.js"></script> 
+     <a href="https://www.w3schools.com">Visit W3Schools</a> 
+     <a href="https://www.youtube.com/watch?v=XovykH6gG50&list=PLwoh6bBAszPrES-EOajos_E9gvRbL27wz&index=22">Visit web dev sols</a> 
 </body>
 </html>
 
